--- a/style2.css
+++ b/style2.css
@@ -84,3 +84,37 @@ footer{
     padding: 10px;
     text-align: center;
   }
+
+  @media (min-width:768px) {
+  .image{
+    width: 60vw;
+    margin-left: 40px;
+    height: 400px;
+    background-color: rgba(0, 0, 0, 0);
+
+  }
+  .image>img{
+    width: 50vw;
+    height: 375px;
+    box-shadow: 3px 3px black;
+  }
+  .content>p{
+    font-size: larger;
+  }
+  }
+
+  @media (min-width:1260px) {
+    
+    .image>img{
+        width: 400px;
+        height: 400px;
+        margin-left: 0px;
+    }
+    .content{
+        margin: auto;
+        margin-top: 50px; 
+        width: 750px;
+        
+    }
+    
+  }
